# proto-1

./: pyproject.toml
src/infrastructure/gui/pyside/: app.py
